# rust-py-ffi

./: .gitignore  Cargo.toml  README.md  pyproject.toml
py/: main.py  pyproject.toml
src/: lib.rs
